--- a/Project 1.2/index.html
+++ b/Project 1.2/index.html
@@ -4,192 +4,198 @@
 <head>
     <meta charset="utf-8" />
     <title>Project 1.2</title>
-    <style>
-        :root {
-            --color-default: #ffffff;
-            --color-new: #0081D5;
-            --color-delete: #D2335B;
-            --color-toolbar: #ECECEC;
-            --color-toggle: #4CD964;
-            --color-border: #E3E3E3;
-            --color-text: #000000;
-            --color-selected: #77B1D7;
-            --color-page: #E1F3FF;
+    <link rel="stylesheet" href="styles.css" />
+    <script type="application/javascript" src="script.js"></script>
+    <script>
 
-            --input-height: 2.2rem;
-            --input-width: 4rem;
-            --input-gap: 0.1rem;
-            --input-border: 0.1rem;
-            --input-toggle-active: calc(var(--input-button-diameter)*1.5);
-            --input-button-diameter: 2rem;
-            --list-item-height: 3rem;
+        function saveItem(value) {
+            if (listItems.includes(value) === false) {
+                listItems.push(value);
+            }
+            saveStorage();
         }
 
-        body {
-            height: 100vh;
-            max-width: 25rem;
-            margin: 0rem;
-            margin: auto;
-            --item-padding: 0rem;
-            background-color: var(--color-default);
+        function saveStorage(){
+            localStorage[itemKey] = JSON.stringify(listItems, (key, value) =>{
+                if(key == "id")
+                    return undefined;
+                return value;
+            });
         }
 
-        header>button {
-            width: 8rem;
-            height: 1.5rem;
-            border-radius: 5%;
-            color: var(--color-default);
-            border: none;
+        async function init() {
+            await loadData();
+            await displayData();
         }
 
-        header>* {
-            margin: 0.5rem;
+        async function loadData() {
+            items = JSON.parse(localStorage.getItem(itemKey));
+            if (items !== null) {
+                items.forEach(async element => {
+                    listItems.push(new todo(listItems.length + 1, element.description, element.status));
+                });
+            };
         }
 
-        header>textarea {
-            width: inherit;
+        async function displayData() {
+            listElement = document.getElementById('todo-list');
+            itemTemplate = document.getElementById('template-item');
+            if (listItems.length > 0) {
+                listItems.forEach(todoItem => {
+                    searchItems.push(todoItem);
+                });
+
+                await displayTodoItems();
+            }
         }
 
-        header {
-            display: flex;
-            flex: 1 1 auto;
-            flex-direction: row;
-            width: 100%;
-            align-content: center;
-            align-items: center;
-            background-color: var(--color-toolbar);
+        function displayTodoItems(){
+            searchItems.forEach(item => {
+                addTodoItem(item);
+            });
         }
 
-        .button-new {
-            background-color: var(--color-new);
+        async function addTodoItem(item) {
+            let li = document.importNode(itemTemplate.content, true);
+            let div = li.querySelector("div");
+            div.dataset.title = item.getDescription();
+            div.dataset.id = item.getId();
+            let input = li.querySelector("input");
+            input.checked = item.getStatus();
+            input.dataset.id = item.getId();
+            addTodoEventListeners(div, input);
+            listElement.appendChild(li);
+
+            return li;
         }
 
-        .button-delete {
-            background-color: var(--color-delete);
+        function addTodoEventListeners(item, status){
+            console.info('adding event listener for click');
+            item.addEventListener('click', itemSelected, false);
+            status.addEventListener('click', statusChanged, false);
         }
 
-        main {
-            background-color: var(--color-page);
-            height: 100%;
-            width: 100%;
+        function removeTodoEventListeners(listItem, status){
+            console.info('removing event listener for click');
+            item.removeEventListener('click');
+            status.removeEventListener('click');
         }
 
-        ul {
-
-            margin: 0;
-            padding: 0;
+        async function statusChanged(event){
+            let changed = event.target;
+            console.info('status changed event click with id: ' + changed.dataset.id);
+            let statusItem = listItems.find(item => item.getId() == changed.dataset.id);
+            statusItem.setStatus(changed.checked);
+            saveItem(statusItem);
         }
 
-        li {
-            height: var(--list-item-height);
-            list-style: none;
-            background-color: var(--color-default);
+        async function itemSelected(event){
+            console.info('list item click event.')
+
+            //TODO BM: need to check this for cross platform selection.
+            if(!event.ctrlKey && !event.metaKey){
+                clearSelected();
+            }
+            let selected = event.target;
+            let index = selectedItems.indexOf(selected);
+
+            if(index != -1){
+                selectedItems.splice(index, 1);
+                selected.dataset.selected = false;
+                return;
+            }
+            
+            selectedItems.push(selected);
+            selected.dataset.selected = true;
+
+            return;
         }
 
-        article {
-            display: flex;
-            flex-direction: row;
-            margin-bottom: 1px;
-            height: 100%;
-            align-items: center;
+        function clearSelected(){
+            selectedItems.forEach(item => {
+                item.dataset.selected = false;
+            });
+            selectedItems = new Array();
         }
 
-        .todo-text,
-        .todo-status {
-            margin: var(--item-padding);
-            background-color: var(--color-default);
-            height: 100%;
+        const listItems = new Array();
+        let searchItems = new Array();
+        let selectedItems = new Array();
+        const itemKey = "todo-items";
+        let listElement;
+        let itemTemplate;
+
+        window.onload = function () {
+            init();
+        };
+
+        function addNewTodo(){
+            displayHeader(false, true);
+            let addTodoText = document.getElementById('addTodoText');
+            addTodoText.focus();
         }
 
-        [data-title] {
-            position: relative;
-            flex: 1 1 auto;
+        function deleteTodo(){
+            if(selectedItems.length == 0){
+                return;
+            }
+
+            //TODO: add are you sure?
         }
 
-        [data-title]:after {
-            content: attr(data-title);
-            position: absolute;
-            left: 1rem;
-            right: 0;
-            text-align: left;
-            top: calc(50% - 0.5rem);
+        async function cancelTodoAdd(){
+            displayHeader(true, false);
+            let addTodoText = document.getElementById('addTodoText');
+            addTodoText.value = '';
         }
 
-        div[data-selected]:before {
-            content: "";
-            position: absolute;
-            height: var(--input-height);
-            top: calc(50% - 1rem);
-            width: 0.25rem;
-            left: 0.5rem;
-            background-color: var(--color-selected);
+        async function saveNewTodo(){
+            let addTodoText = document.getElementById('addTodoText').value;
+            if(addTodoText == undefined || addTodoText == ""){
+                return;
+            }
+            var t = new todo(listItems.length + 1, addTodoText);
+
+            await saveItem(t);
+            searchItems.push(t);
+            //TODO: see if we cannot focus element.
+            let li = await addTodoItem(t);
+            await cancelTodoAdd();
         }
 
-        input[type=checkbox] {
-            height: 0;
-            width: 0;
-            visibility: hidden;
+        function displayHeader(showDefault, showAdd){    
+            let defaultHeader = document.getElementById('defaultHeader');
+            let addHeader = document.getElementById('addHeader');        
+            defaultHeader.dataset.display = showDefault;
+            addHeader.dataset.display = showAdd;
         }
 
-        label {
-            cursor: pointer;
-            right: 0.5rem;
-            text-indent: -9999px;
-            width: var(--input-width);
-            height: var(--input-height);
-            background: var(--color-default);
-            display: block;
-            border-radius: var(--input-height);
-            position: relative;
-            border: var(--input-border) solid var(--color-border);
-            flex: 0 0 var(--input-width);
-        }
-
-        label:after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: var(--input-button-diameter);
-            height: var(--input-button-diameter);
-            background: var(--color-grid);
-            border-radius: var(--input-button-diameter);
-            transition: 0.3s;
-            border: var(--input-border) solid var(--color-border);
-            box-shadow: 0 0 5px 0 var(--color-border)
-        }
-
-        input:checked+label {
-            background: var(--color-toggle);
-        }
-
-        input:checked+label:after {
-            left: 100%;
-            transform: translateX(-100%);
-        }
-
-        label:active:after {
-            width: var(--input-toggle-active);
-        }
-    </style>
+    </script>
 </head>
 
 <body>
     <header>
-        <button class="button-new">New</button>
-        <textarea></textarea>
-        <button class="button-delete">Delete</button>
+        <section id="defaultHeader" class="default-header" data-display="true">
+            <button class="button-new default-button" id="new" onclick="addNewTodo()">New</button>
+            <textarea class="input-todo"></textarea>
+            <button class="button-delete default-button" id="deleted" onclick="deleteTodo()" disabled>Delete</button>
+        </section>
+        <section id="addHeader" class="todo-add">
+            <textarea id="addTodoText" class="input-todo"></textarea>
+            <button class="button-new default-button" onclick="saveNewTodo()">Add</button>
+            <button class="button-delete default-button" onclick="cancelTodoAdd()">Cancel</button>
+        </section>
     </header>
     <main>
-        <ul>
-            <li>
-                <article>
-                    <div data-title="Text" data-selected></div>
-                    <input type="checkbox" id="switch">
-                    <label for="switch">Toggle</label>
-                </article>
-            </li>
-        </ul>
+        <section>
+            <template id="template-item">
+                <li class="list-item">
+                    <div data-title="" data-selected=false></div>
+                    <input type="checkbox" id="switch" class="switch">
+                </li>
+            </template>
+            <ul class="list" id="todo-list"></ul>
+        </section>
     </main>
 </body>
 
