--- a/project-1.2V2/src/todo.html
+++ b/project-1.2V2/src/todo.html
@@ -1,12 +1,25 @@
 <template id="listItem">
     <li class="list-item">
         <div id="text"></div>
-        <input id="switch" type="checkbox" class="switch">
+        <input id="switch" type="checkbox">
     </li>
 </template>
 
 <script>
     class TodoItem extends HTMLElement {
+
+        get todo(){
+            return this._todo;
+        }
+
+        set todo(newValue){
+            this._todo = newValue;
+        }
+
+        set selected(newValue){
+            this.setAttribute('selected', newValue);
+        }
+
         connectedCallback() {
             const currentDocument = document.currentScript.ownerDocument;
             this.listItemTemplate = currentDocument.querySelector('#listItem');
@@ -20,22 +33,36 @@
 
         disconnectionedCallback() {
             removeEventListeners();
+            this.listItemTemplate = null;
+            this.listItem = null;
+            this.todoContent = null;
+            this.switch = null;
         }
 
         addEventListeners() {
             
             this.itemSelectedEventHandler = itemSelected.bind(this);
-            this.todoContent.addEventListener('click', itemSelected, false);
-            this.switch.addEventListener('click', statusChanged, false);
+            this.statusChangedEventHandler = statusChanged.bind(this);
+            this.todoContent.addEventListener('click', itemSelectedEventHandler, false);
+            this.switch.addEventListener('click', statusChangedEventHandler, false);
         }
 
         removeEventListeners() {
-            this.todoContent.removeEventListener('click', itemSelected, false);
-            this.switch.removeEventListener('click', statusChanged, false);
+            this.todoContent.removeEventListener('click', this.itemSelectedEventHandler, false);
+            this.switch.removeEventListener('click', statusChangedEventHandler, false);
+
+            this.itemSelectedEventHandler = null;
+            this.statusChangedEventHandler = null;
         }
 
         itemSelected(){
+            todo.selected = !todo.selected;
+        }
 
+        statusChanged(){
+            todo.setStatus(this.switch.checked);
         }
     }
+
+    customElements.define("li-todo", TodoItem);
 </script>
