--- a/project-1.2V2/index.html
+++ b/project-1.2V2/index.html
@@ -8,6 +8,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="src/todo.css" />
     <script src="webcomponents-loader.js"></script>
     <script type="application/javascript" src="script.js"></script>
 </head>
@@ -29,7 +30,6 @@
     <main>
         <section>
             <ul class="list" id="todo-list">
-                <li-todo></li-todo>
             </ul>
         </section>
     </main>
