--- a/project-1.2V2/src/todoList.html
+++ b/project-1.2V2/src/todoList.html
@@ -1,18 +1,18 @@
 <template id="todoTemplate">
-    <section id="defaultHeader" class="default-header" data-display="true">
+    <div id="defaultHeader" class="default-header" data-display="true">
         <button id="newTodoButton" class="button-new default-button button-new-todo" id="new"></button>
         <textarea id="inputTodoSearch" class="input-todo input-search-todo"></textarea>
         <button id="deleteTodoButton" class="button-delete default-button button-delete-todo" disabled></button>
-    </section>
-    <section id="addHeader" class="todo-add">
+    </div>
+    <div id="addHeader" class="todo-add">
         <textarea id="addTodoText" class="input-todo"></textarea>
         <button id="addTodoButton" class="button-new default-button" disabled>Add</button>
         <button id="cancelAddTodo" class="button-delete default-button">Cancel</button>
-    </section>
-    <section class="main">
+    </div>
+    <div class="main">
         <ul id="todo-list" class="list">
         </ul>
-    </section>
+    </div>
 </template>
 
 
@@ -45,8 +45,6 @@
         }
 
         addEventListeners() {
-            this.updatedSelectionEventHandler = this.updateSelection.bind(this);
-            document.addEventListener(TodoItem.selectionChanged, this.updatedSelectionEventHandler, false);
             this.newTodoRequestedEventHandler = this.newTodoRequested.bind(this);
             this.newTodoButton.addEventListener('click', this.newTodoRequestedEventHandler, false);
             this.newTodoCancelledEventHandler = this.newTodoCancelled.bind(this);
@@ -61,10 +59,12 @@
             this.deleteTodoButton.addEventListener('click', this.deleteSelectedTodoItemsEventHandler, false);
             this.filterItemsEventHandler = this.filterItems.bind(this);
             this.inputTodoSearch.addEventListener('keyup', this.filterItemsEventHandler, false);
+            this.todoSelectedEventListener = this.todoSelected.bind(this);
+            this.ul.addEventListener('click', this.todoSelectedEventListener);
+
         }
 
         removeEventListeners() {
-            document.removeEventListener(TodoItem.selectionChanged, this.updatedSelectionEventHandler, false);
             this.newTodoButton.removeEventListener('click', this.newTodoRequestedEventHandler, false);
             this.cancelAddTodo.removeEventListener('click', this.newTodoCancelledEventHandler, false);
             this.addTodoButton.removeEventListener('click', this.saveNewTodoEventHandler, false);
@@ -72,7 +72,7 @@
             this.addTodoText.removeEventListener('keypress', this.todoTextChangedEventHandler, false);
             this.deleteTodoButton.removeEventListener('click', this.deleteSelectedTodoItemsEventHandler, false);
             this.inputTodoSearch.removeEventListener('keyup', this.filterItemsEventHandler, false);
-            delete this.updatedSelectionEventHandler;
+            this.ul.removeEventListener('click', this.todoSelectedEventListener);
             delete this.newTodoRequestedEventHandler;
             delete this.newTodoCancelledEventHandler;
             delete this.saveNewTodoEventHandler;
@@ -80,6 +80,7 @@
             delete this.todoTextChangedEventHandler;
             delete this.deleteSelectedTodoItemsEventHandler;
             delete this.filterItemsEventHandler;
+            delete this.todoSelectedEventListener;
         }
 
         disconnectionedCallback() {
@@ -101,9 +102,24 @@
             delete this.defaultHeader;
         }
 
-        updateSelection(event) {
-            const selectedItem = event.detail.obj;
-            const multiSelect = event.detail.multiSelect;
+        todoSelected(event) {
+            var selectedElement = event.target;
+            while(selectedElement && selectedElement.tagName.toLowerCase() !== 'to-do-item'){
+                selectedElement = selectedElement.parentNode;
+            }
+
+            if(selectedElement == undefined){
+                return;
+            }
+
+            const multiSelect = event.shiftKey;
+            const todoItem = selectedElement;
+            const selected = !todoItem.selected;
+            todoItem.updateSelection(selected);
+            this.updateSelection(todoItem, multiSelect);
+        }
+
+        updateSelection(selectedItem, multiSelect) {
             const index = this.selectedItems.indexOf(selectedItem);
 
             if (!multiSelect) {
@@ -155,7 +171,7 @@
             this.displayHeader(false);
         }
 
-        clearNewTodoText(){
+        clearNewTodoText() {
             this.addTodoText.value = '';
         }
 
@@ -216,13 +232,13 @@
             addTodoButton.disabled = !textValue || textValue.trim().length == 0;
         }
 
-        deleteSelectedTodoItems(){
-            if(this.selectedItems.length == 0){
+        deleteSelectedTodoItems() {
+            if (this.selectedItems.length == 0) {
                 return;
             }
-            
-            if(confirm("Are you sure?")){
-                this.selectedItems.forEach(item =>{
+
+            if (confirm("Are you sure?")) {
+                this.selectedItems.forEach(item => {
                     this.viewModel.removeTodo(item.todo);
                 });
 
@@ -232,7 +248,7 @@
             }
         }
 
-        filterItems(){
+        filterItems() {
             const value = this.inputTodoSearch.value;
             this.searchItems = this.viewModel.filter(value);
             this.displayTodoItems();
